--- a/indexer/device_did/package.json
+++ b/indexer/device_did/package.json
@@ -8,6 +8,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
+    "start": "node dist/run.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "up": "docker-compose up -d",
     "up:devnet": "docker-compose -f docker-compose-devnet.yaml --project-name staking-devnet up -d"
