--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "ethereum-cryptography": "^2.1.3"
     },
     "devDependencies": {
+        "@faker-js/faker": "^8.4.1",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
