--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@coral-xyz/anchor": "^0.29.0",
         "@ethereumjs/util": "^9.0.2",
+        "dotenv": "^16.4.5",
         "ethereum-cryptography": "^2.1.3"
     },
     "devDependencies": {
@@ -16,6 +17,7 @@
         "mocha": "^9.0.3",
         "prettier": "^2.6.2",
         "ts-mocha": "^10.0.0",
+        "ts-node": "^10.9.2",
         "typescript": "^4.3.5"
     }
 }
