--- a/indexer/device_did/package.json
+++ b/indexer/device_did/package.json
@@ -7,6 +7,7 @@
   "types": "dist/index.d.js",
   "type": "module",
   "scripts": {
+    "clear": "rm -rf dist",
     "build": "tsc -p ./tsconfig.json",
     "start": "node dist/run.js",
     "test": "echo \"Error: no test specified\" && exit 1",
