--- a/indexer/explorer/package.json
+++ b/indexer/explorer/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-app-rewired start",
+    "start:remote": "HOST=0.0.0.0 PORT=8081 react-scripts start",
     "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -21,15 +22,16 @@
     "antd": "^5.15.0",
     "axios": "^1.6.7",
     "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "customize-cra": "^1.0.0",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "url": "^0.11.3",
-    "web-vitals": "^2.1.4",
-    "buffer": "^6.0.3"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "browserify-fs": "^1.0.0",
