--- a/indexer/explorer/package.json
+++ b/indexer/explorer/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
+    "@ethereumjs/util": "^9.0.3",
+    "@faker-js/faker": "^8.4.1",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
@@ -23,7 +25,10 @@
     "axios": "^1.6.7",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "customize-cra": "^1.0.0",
+    "ethereum-cryptography": "^2.1.3",
+    "ethereumjs-util": "^7.1.5",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,7 +40,6 @@
   },
   "devDependencies": {
     "browserify-fs": "^1.0.0",
-    "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
