--- a/indexer/explorer/package.json
+++ b/indexer/explorer/package.json
@@ -29,6 +29,7 @@
     "customize-cra": "^1.0.0",
     "ethereum-cryptography": "^2.1.3",
     "ethereumjs-util": "^7.1.5",
+    "ethers": "5.7.2",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
